# agent-demo

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
ai_assistant/: agent.py  agents.py  main.py  models.py
ai_assistant/tools/: google.py  tools.py
tests/: test_google_client.py
