[project]
name = "agentdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pre-commit>=4.2.0",
    "pydantic-ai[logfire]>=0.1.11",
    "pyright[nodejs]>=1.1.400",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
